Style: header color modified

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         margin: 20px 0;
       }
       nav a {
-        color: white;
+        color: rgb(228, 67, 67);
         margin: 0 15px;
         text-decoration: none;
       }
