--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         background-color: #f4f4f4;
       }
       header {
-        background: #35424a;
+        background: #1573ad;
         color: white;
         padding: 20px 0;
         text-align: center;
